fixed minor bugs for all plugins@embeddings

--- a/plugins/embeddings/riley/plugin.ini
+++ b/plugins/embeddings/riley/plugin.ini
@@ -1,10 +1,10 @@
 [INIT]
 caption=Riley slice
 group=Indra's Pearls
-start.fn=CIRCLESembeddingsRILEYSLICEmain()
+start.fn=CIRCLESembeddingsRILEYmain()
 default.start.params=1,0,1
 file=plugin.main.js
 subset=embeddings
-baseid=riley.slice
+baseid=riley
 load=1
 exec_pre_open=
