fixed minor bugs

--- a/plugins/embeddings/maskit.twice/plugin.ini
+++ b/plugins/embeddings/maskit.twice/plugin.ini
@@ -1,5 +1,5 @@
 [INIT]
-caption=Maskit - twice punctured torus
+caption=Maskit T2,2 - Twice punctured torus
 group=Indra's Pearls
 start.fn=CIRCLESembeddingsMASKITTWICEmain()
 default.start.params=1,0,1
