--- a/plugins/embeddings/maskit.once/plugin.ini
+++ b/plugins/embeddings/maskit.once/plugin.ini
@@ -1,5 +1,5 @@
 [INIT]
-caption=Maskit - once punctured torus
+caption=Maskit T1,1- once punctured torus
 group=Indra's Pearls
 start.fn=CIRCLESembeddingsMASKITONCEmain()
 default.start.params=1,0,1
