fixing bugs in coords plugin

--- a/settings/circles.menu.ini
+++ b/settings/circles.menu.ini
@@ -98,9 +98,9 @@
 3.4.1@Panel@circles_lib_plugin_load('forms','coordinates',NO,Z_PLANE);@3.4.1
 3.4.2@Default view@circles_lib_coordinates_reset_core(Z_PLANE,YES,NO,YES,OUTPUT_SCREEN);circles_lib_canvas_process_ask(NO,YES,Z_PLANE,YES,YES,CHECK,null,OUTPUT_SCREEN);@3.4.2
 3.4.3@Zoom to fit@circles_lib_coordinates_zoomtofit(Z_PLANE,YES,NO,YES);@3.4.3
-3.4.4@View mouse coords as@@3.4.4
-3.4.4.1@Cartesian@circles_lib_canvas_coords_toggle_remap(Z_PLANE,CANVAS_CARTESIAN_MAP);@3.4.4.1@MENU_ITEM_ZPLANE_CARTESIAN_MAP
-3.4.4.2@Screen@circles_lib_canvas_coords_toggle_remap(Z_PLANE,CANVAS_SCREEN_MAP);@3.4.4.2@MENU_ITEM_ZPLANE_SCREEN_MAP
+3.4.4@View pointer coords as@@3.4.4
+3.4.4.1@Cartesian values@circles_lib_canvas_coords_toggle_remap(Z_PLANE,CANVAS_CARTESIAN_MAP);@3.4.4.1@MENU_ITEM_ZPLANE_CARTESIAN_MAP
+3.4.4.2@Screen values@circles_lib_canvas_coords_toggle_remap(Z_PLANE,CANVAS_SCREEN_MAP);@3.4.4.2@MENU_ITEM_ZPLANE_SCREEN_MAP
 3.5@line@@3.5
 3.6@Seeds@@3.6
 3.6.1@List@circles_lib_plugin_load('forms','seeds.list');@3.6.1@@CTRL+L
