enhanced index search method

--- a/settings/circles.menu.ini
+++ b/settings/circles.menu.ini
@@ -7,7 +7,7 @@
 1.3@Process@@1.3
 1.3.1@Deterministic@@1.3.1
 1.3.1.1@Breadth first@circles_lib_process_set(PROCESS_BREADTHFIRST);circles_lib_menu_entries_update();@1.3.1.1@MENU_PROCESS_BREADTHFIRST
-1.3.1.2@Index search@circles_lib_process_set(PROCESS_INDEXSEARCH);_glob_fixedpt_io=FIXEDPOINTS_IO_INPUT;_glob_dict_create=NO;circles_lib_menu_entries_update();@1.3.1.2@MENU_PROCESS_INDEXSEARCH
+1.3.1.2@Index search@circles_lib_process_set(PROCESS_INDEXSEARCH);circles_lib_construction_mode_set( CONSTRUCTION_TILING );_glob_fixedpt_io=FIXEDPOINTS_IO_INPUT;_glob_dict_create=NO;circles_lib_menu_entries_update();@1.3.1.2@MENU_PROCESS_INDEXSEARCH
 1.3.3@Random@circles_lib_process_set(PROCESS_RANDOM);_glob_fixedpt_io=FIXEDPOINTS_IO_INPUT;_glob_dict_create=NO;circles_lib_menu_entries_update();@1.3.3@MENU_PROCESS_RANDOM
 1.4@Fixed points@@1.4@
 1.4.1@Input@_glob_fixedpt_io=FIXEDPOINTS_IO_INPUT;circles_lib_menu_entries_update();@1.4.1@MENU_FIXEDPOINTS_IO_INPUT
