fixed bugs for plug-ins

--- a/settings/circles.menu.ini
+++ b/settings/circles.menu.ini
@@ -1,6 +1,6 @@
 1@Settings@@1@MENU_MAIN_SETTINGS
 1.1@Config@@1.1@@
-1.1.1@New config@circles_lib_config_create_new_main(YES,NO,RESET_ALL,NO,YES);@1.1.1@@CTRL+N
+1.1.1@New config@circles_lib_config_create_new_main(YES,NO,RESET_ALL,NO,YES);@1.1.1@@
 1.1.2@Load config@$("#customloader").get(0).onchange = function() { CIRCLESconfigOPENDIALOG( circles_lib_files_load_environment ) };$('#customloader').trigger('click');@1.1.2@@
 1.1.3@Save config@circles_lib_config_save();@1.1.3@@
 1.2@line@@1.2
@@ -12,7 +12,7 @@
 1.4@Fixed points@@1.4@
 1.4.1@Input@_glob_fixedpt_io=FIXEDPOINTS_IO_INPUT;circles_lib_menu_entries_update();@1.4.1@MENU_FIXEDPOINTS_IO_INPUT
 1.5@Method@@1.5
-1.5.1@Current method@circles_lib_plugin_load('forms','method',NO,0,_glob_method,null);@1.5.1@@CTRL+ALT+M
+1.5.1@Current method@circles_lib_plugin_load('forms','method',NO,0,_glob_method,null);@1.5.1@@
 1.5.2@line@@1.5.2
 1.5.3@Inversion@circles_lib_method_set(METHOD_INVERSION);_glob_construction_mode=_glob_dict_processor.DISPLAYwordsMODE=CONSTRUCTION_TILING;_glob_drawentity=DRAWENTITY_ISOMETRIC_CIRCLE;_glob_items_to_init=YES;$('[id$=initBTN]').css('color',COLOR_ERROR);circles_lib_menu_entries_update();circles_lib_plugin_reload_basic_forms();@1.5.3@MENU_METHOD_INVERSION
 1.5.4@Algebraic@circles_lib_method_set(METHOD_ALGEBRAIC);_glob_construction_mode=_glob_dict_processor.DISPLAYwordsMODE=CONSTRUCTION_LIMITSET;_glob_drawentity=DRAWENTITY_PIXEL;_glob_items_to_init=YES;$('[id$=initBTN]').css('color',COLOR_ERROR);circles_lib_menu_entries_update();circles_lib_plugin_reload_basic_forms();@1.5.4@MENU_METHOD_ALGEBRAIC
@@ -75,8 +75,8 @@
 2.2.2@%tools%@@2.2.2
 2.3@line@@2.3
 2.4@Terminal@@2.4
-2.4.1@Console@circles_lib_plugin_load('forms','terminal',YES,0,YES);@2.4.1@@CTRL+ALT+T
-2.4.2@Batch Script Compiler@circles_lib_plugin_load('forms','terminal',YES,1,YES);@2.4.2@@CTRL+ALT+B
+2.4.1@Console@circles_lib_plugin_load('forms','terminal',YES,0,YES);@2.4.1@@
+2.4.2@Batch Script Compiler@circles_lib_plugin_load('forms','terminal',YES,1,YES);@2.4.2@@
 2.5@Editors@@2.5
 2.5.1@Circles script@circles_lib_plugin_load('forms','script.editor');@2.5.1
 2.5.2@SVG Editor@circles_lib_plugin_load('forms','svg.editor');@2.5.2
@@ -87,8 +87,8 @@
 3@Z-plane@@3@MENU_MAIN_ZPLANE
 3.1@Basic operations@@3.1@@
 3.1.1@Clean (no render)@circles_lib_canvas_plane_refresh(Z_PLANE,YES);@3.1.1@@
-3.1.2@Refresh@circles_lib_canvas_process_ask(NO,YES,Z_PLANE,YES,YES,CHECK);@3.1.2@@CTRL+ALT+R
-3.1.3@Set Z-plane as target@_glob_target_plane=Z_PLANE;circles_lib_menu_entries_update();@3.1.3@MENU_ZPLANE_TARGET@CTRL+ALT+R
+3.1.2@Refresh@circles_lib_canvas_process_ask(NO,YES,Z_PLANE,YES,YES,CHECK);@3.1.2@@
+3.1.3@Set Z-plane as target@_glob_target_plane=Z_PLANE;circles_lib_menu_entries_update();@3.1.3@MENU_ZPLANE_TARGET@
 3.2@Hide Axes@_glob_show_grid_zplane=!_glob_show_grid_zplane;circles_lib_canvas_render_zplane(null,null,null,YES,YES,YES,NO,YES);circles_lib_menu_entries_update();@3.2@MENU_SHOW_HIDE_AXES_ZPLANE
 3.3@Show symbols@circles_lib_symbol_zplane_display(null,null,null,YES,YES,YES);@3.3@MENU_SHOW_HIDE_SYMBOLS_ZPLANE
 3.4@Coords & Zoom@@3.4
@@ -100,21 +100,22 @@
 3.4.4.2@Screen values@circles_lib_canvas_coords_toggle_remap(Z_PLANE,CANVAS_SCREEN_MAP);@3.4.4.2@MENU_ITEM_ZPLANE_SCREEN_MAP
 3.5@line@@3.5
 3.6@Seeds@@3.6
-3.6.1@List@circles_lib_plugin_load('forms','seeds.list');@3.6.1@@CTRL+L
-3.6.2@Edit@circles_lib_plugin_load('forms','edit.disk',YES,UNDET,ITEMS_SWITCH_SEEDS);@3.6.2@@CTRL+E
-3.6.3@Check@circles_lib_plugin_load('forms','help.items',YES,ITEMS_SWITCH_SEEDS);@3.6.3@@CTRL+K
-3.6.4@Unselect@circles_lib_items_unselect(NO,YES);@3.6.4@@CTRL+ALT+U
-3.6.5@Copy@circles_lib_items_copy_to_storage_space(ITEMS_SWITCH_SEEDS);circles_lib_plugin_dispatcher_unicast_message('storage.space','forms',1);@3.6.5@@
+3.6.1@List@circles_lib_plugin_load('forms','seeds.list');@3.6.1@@
+3.6.2@Edit@circles_lib_plugin_load('forms','edit.disk',YES,UNDET,ITEMS_SWITCH_SEEDS);@3.6.2@@
+3.6.3@Check@circles_lib_plugin_load('forms','help.items',YES,ITEMS_SWITCH_SEEDS);@3.6.3@@
+3.6.4@Select all disks@circles_lib_complexdisk_select_all();@3.6.4@@
+3.6.5@Unselect@circles_lib_items_unselect(NO,YES);@3.6.5@@
+3.6.6@Copy@circles_lib_items_copy_to_storage_space(ITEMS_SWITCH_SEEDS);circles_lib_plugin_dispatcher_unicast_message('storage.space','forms',1);@3.6.6@@
 3.7@Generators@@3.7
 3.7.1@Edit@circles_lib_plugin_load('forms','edit.disk',YES,UNDET,ITEMS_SWITCH_GENS);@3.7.1@@
-3.7.2@Check@circles_lib_plugin_load('forms','help.items',YES,ITEMS_SWITCH_GENS);@3.7.2@@CTRL+K
+3.7.2@Check@circles_lib_plugin_load('forms','help.items',YES,ITEMS_SWITCH_GENS);@3.7.2@@
 3.8@line@@3.8
 3.9@Display@@3.9
 3.9.1@Seeds@circles_lib_items_switch_to(ITEMS_SWITCH_SEEDS,NO);circles_lib_menu_entries_update();circles_lib_canvas_render_zplane(null,null,null,YES,YES,YES,NO,YES);@3.9.1@MENU_ITEM_SEEDS
 3.9.2@Gens@circles_lib_items_switch_to(ITEMS_SWITCH_GENS,NO);circles_lib_menu_entries_update();circles_lib_canvas_render_zplane(null,null,null,YES,YES,YES,NO,YES);@3.9.2@MENU_ITEM_GENS
 3.10@line@@3.10
 3.11@Capture & Save pix@@3.11
-3.11.1@PNG@circles_lib_files_pix_save_ask(Z_PLANE,_glob_zplane_rendering_canvas_placeholder,'zplane.png',_glob_zplane_canvas_merge);@3.11.1@@CTRL+ALT+S
+3.11.1@PNG@circles_lib_files_pix_save_ask(Z_PLANE,_glob_zplane_rendering_canvas_placeholder,'zplane.png',_glob_zplane_canvas_merge);@3.11.1@@
 3.11.2@SVG@circles_lib_files_pix_save_ask(Z_PLANE,_glob_zplane_rendering_canvas_placeholder,'zplane.svg',_glob_zplane_canvas_merge);@3.11.2
 3.11.3@PS@circles_lib_canvas_save_to_e_ps('z.plane.ps');@3.11.3
 3.11.4@EPS@circles_lib_canvas_save_to_e_ps('z.plane.eps');@3.11.4
@@ -129,9 +130,9 @@
 3.15@Merge options@circles_lib_plugin_load('forms','merging',YES,Z_PLANE);@3.15
 4@W-plane@@4@MENU_MAIN_WPLANE
 4.1@Basic operations@@4.1@@
-4.1.1@Clean (no render)@circles_lib_canvas_plane_refresh(W_PLANE,YES);@4.1.1@@CTRL+ALT+F
-4.1.2@Redraw@circles_lib_canvas_process_ask(YES,YES,W_PLANE,YES,YES,CHECK);@4.1.2@@CTRL+ALT+F
-4.1.3@Set W-plane as target@_glob_target_plane=W_PLANE;circles_lib_menu_entries_update();@4.1.3@MENU_WPLANE_TARGET@CTRL+ALT+R
+4.1.1@Clean (no render)@circles_lib_canvas_plane_refresh(W_PLANE,YES);@4.1.1@@
+4.1.2@Redraw@circles_lib_canvas_process_ask(YES,YES,W_PLANE,YES,YES,CHECK);@4.1.2@@
+4.1.3@Set W-plane as target@_glob_target_plane=W_PLANE;circles_lib_menu_entries_update();@4.1.3@MENU_WPLANE_TARGET@
 4.2@Hide Grid@_glob_show_grid_wplane=!_glob_show_grid_wplane;circles_lib_menu_entries_update();circles_lib_canvas_render_wplane(null,null,null,YES,NO,NO,NO);@4.2@MENU_SHOW_HIDE_AXES_WPLANE
 4.4@Coords & Zoom@@4.4
 4.4.1@Panel@circles_lib_plugin_load('forms','coordinates',NO,W_PLANE);@4.4.1
@@ -141,7 +142,7 @@
 4.4.3.2@Screen@circles_lib_canvas_coords_toggle_remap(W_PLANE,CANVAS_SCREEN_MAP);@4.4.3.2@MENU_ITEM_WPLANE_SCREEN_MAP
 4.5@line@@4.5
 4.6@Save@@4.6
-4.6.1@PNG@circles_lib_files_pix_save_ask(W_PLANE,_glob_wplane_rendering_canvas_placeholder,'wplane.png',_glob_wplane_canvas_merge);@4.6.1@@CTRL+ALT+I
+4.6.1@PNG@circles_lib_files_pix_save_ask(W_PLANE,_glob_wplane_rendering_canvas_placeholder,'wplane.png',_glob_wplane_canvas_merge);@4.6.1@@
 4.6.2@SVG@circles_lib_files_pix_save_ask(W_PLANE,_glob_wplane_rendering_canvas_placeholder,'wplane.svg',_glob_wplane_canvas_merge);@4.6.2
 4.6.3@PS@circles_lib_canvas_save_to_e_ps('w.plane.ps');@4.6.3
 4.6.4@EPS@circles_lib_canvas_save_to_e_ps('w.plane.eps');@4.6.4
@@ -150,14 +151,14 @@
 4.6.7@PDF report@circles_lib_files_pdf_save_ask(circles_lib_files_pdf_save_report,NO,OUTPUT_SCREEN,CALLER_TYPE_NONE,W_PLANE);@4.6.7@@
 4.7@line@@4.7
 4.8@Benchmark@circles_lib_plugin_load('forms','benchmark');@4.8
-4.9@Tiny rendering@circles_lib_plugin_load('forms','tiny.rendering');@4.9@@CTRL+ALT+G
+4.9@Tiny rendering@circles_lib_plugin_load('forms','tiny.rendering');@4.9@@
 4.10@Anti-homography@circles_lib_plugin_load('forms','anti.homography',NO);@4.10@
 4.11@line@@4.11
 4.12@Merge options@circles_lib_plugin_load('forms','merging',YES,W_PLANE);@4.12
 5@Analysis@@5@MENU_MAIN_ANALYSIS
 5.1@Dictionary@@5.1@@
-5.1.1@Manager@circles_lib_plugin_load('forms','dictionary');@5.1.1@@CTRL+ALT+D
-5.1.2@Automaton@circles_lib_plugin_load('forms','automaton');@5.1.2@@CTRL+ALT+J
+5.1.1@Manager@circles_lib_plugin_load('forms','dictionary');@5.1.1@@
+5.1.2@Automaton@circles_lib_plugin_load('forms','automaton');@5.1.2@@
 5.2@line@@5.2
 5.3@Tangency@@5.3
 5.3.1@Intersection points@circles_lib_plugin_load('forms','intersection.points');@5.3.1
