--- a/settings/circles.menu.ini
+++ b/settings/circles.menu.ini
@@ -44,11 +44,11 @@
 1.12@Generals@@1.12
 1.12.1@Options@@1.12.1
 1.12.1.1@Basics@if($('#POPUPgeneraloptionsDIV').resizable('instance')!=undefined){$('#POPUPgeneraloptionsDIV').resizable('destroy');}circles_lib_plugin_load('forms','general.options',YES,1);@1.12.1.1
-1.12.1.2@Z-plane - Layers@if($('#POPUPgeneraloptionsDIV').resizable('instance')!=undefined){$('#POPUPgeneraloptionsDIV').resizable('destroy');}circles_lib_plugin_load('forms','general.options',YES,2);@1.12.1.2
-1.12.1.3@W-plane - Layers@if($('#POPUPgeneraloptionsDIV').resizable('instance')!=undefined){$('#POPUPgeneraloptionsDIV').resizable('destroy');}circles_lib_plugin_load('forms','general.options',YES,3);@1.12.1.3
-1.12.1.4@Colors@if($('#POPUPgeneraloptionsDIV').resizable('instance')!=undefined){$('#POPUPgeneraloptionsDIV').resizable('destroy');}circles_lib_plugin_load('forms','general.options',YES,4);@1.12.1.4
-1.12.1.5@Extras@if($('#POPUPgeneraloptionsDIV').resizable('instance')!=undefined){$('#POPUPgeneraloptionsDIV').resizable('destroy');}circles_lib_plugin_load('forms','general.options',YES,5);@1.12.1.5
-1.12.1.6@Export@if($('#POPUPgeneraloptionsDIV').resizable('instance')!=undefined){$('#POPUPgeneraloptionsDIV').resizable('destroy');}circles_lib_plugin_load('forms','general.options',YES,6);@1.12.1.6
+1.12.1.2@Z-plane - Layers@if($('#POPUPgeneraloptionsDIV').resizable('instance')!=undefined){$('#POPUPgeneraloptionsDIV').resizable('destroy');};circles_lib_plugin_load('forms','general.options',YES,2);@1.12.1.2
+1.12.1.3@W-plane - Layers@if($('#POPUPgeneraloptionsDIV').resizable('instance')!=undefined){$('#POPUPgeneraloptionsDIV').resizable('destroy');};circles_lib_plugin_load('forms','general.options',YES,3);@1.12.1.3
+1.12.1.4@Colors@if($('#POPUPgeneraloptionsDIV').resizable('instance')!=undefined){$('#POPUPgeneraloptionsDIV').resizable('destroy');};circles_lib_plugin_load('forms','general.options',YES,4);@1.12.1.4
+1.12.1.5@Extras@if($('#POPUPgeneraloptionsDIV').resizable('instance')!=undefined){$('#POPUPgeneraloptionsDIV').resizable('destroy');};circles_lib_plugin_load('forms','general.options',YES,5);@1.12.1.5
+1.12.1.6@Export@if($('#POPUPgeneraloptionsDIV').resizable('instance')!=undefined){$('#POPUPgeneraloptionsDIV').resizable('destroy');};circles_lib_plugin_load('forms','general.options',YES,6);@1.12.1.6
 1.12.2@Colors palette@circles_lib_plugin_load('forms','palette',YES);@1.12.2
 1.12.3@Interface@@1.12.3
 1.12.3.1@Default@circles_lib_interface_reset( INTERFACE_EXTEND_NONE, YES, NO, YES );@1.12.3.1@MENU_INTERFACE_EXTEND_NONE
