keepin' on fixing bugs for method plug-in

--- a/settings/circles.menu.ini
+++ b/settings/circles.menu.ini
@@ -16,7 +16,7 @@
 1.5.1.1@Repetends@setTimeout( function(){ circles_lib_plugin_load('forms','method',NO,0,_glob_method,null); }, 700 );@1.5.1.1
 1.5.1.2@Generators set@setTimeout( function(){ circles_lib_plugin_load('forms','method',NO,1,_glob_method,null); }, 700 );@1.5.1.2
 1.5.1.3@Random IFS table@setTimeout( function(){ circles_lib_plugin_load('forms','method',NO,2,_glob_method,null); }, 700 );@1.5.1.3
-1.5.1.4@Repetends@setTimeout( function(){ circles_lib_plugin_load('forms','method',NO,3,_glob_method,null); }, 700 );@1.5.1.4
+1.5.1.4@Input points@setTimeout( function(){ circles_lib_plugin_load('forms','method',NO,3,_glob_method,null); }, 700 );@1.5.1.4
 1.5.2@line@@1.5.2
 1.5.3@Inversion@circles_lib_method_set(METHOD_INVERSION);_glob_construction_mode=_glob_dict_processor.DISPLAYwordsMODE=CONSTRUCTION_TILING;_glob_drawentity=DRAWENTITY_ISOMETRIC_CIRCLE;_glob_items_to_init=YES;$('[id$=initBTN]').css('color',COLOR_ERROR);circles_lib_menu_entries_update();circles_lib_plugin_reload_basic_forms();@1.5.3@MENU_METHOD_INVERSION
 1.5.4@Algebraic@circles_lib_method_set(METHOD_ALGEBRAIC);_glob_construction_mode=_glob_dict_processor.DISPLAYwordsMODE=CONSTRUCTION_LIMITSET;_glob_drawentity=DRAWENTITY_PIXEL;_glob_items_to_init=YES;$('[id$=initBTN]').css('color',COLOR_ERROR);circles_lib_menu_entries_update();circles_lib_plugin_reload_basic_forms();@1.5.4@MENU_METHOD_ALGEBRAIC
