still fixing bugs for method plug-in

--- a/triggers/gens.set.01/trigger.gens.set.01.ini
+++ b/triggers/gens.set.01/trigger.gens.set.01.ini
@@ -2,6 +2,6 @@
 id = gens_set_01
 init_fn = trigger_gens_set_01()
 title=Boostin' commutator
-description = A new gens set is built up from given seeds and the commutator. A random table is set up then, together with some input fixed points resulting from the commutator. Rendering is performed as a random IFS.
+description = A new generators set is built up from given seeds and the commutator. A random table is set up then, together with some input fixed points resulting from the commutator. Rendering is performed as a random IFS.
 file = trigger.gens.set.01.js
 auto=0
