--- a/triggers/default.proc/trigger.default.proc.01.ini
+++ b/triggers/default.proc/trigger.default.proc.01.ini
@@ -2,6 +2,6 @@
 id = default_proc
 init_fn = trigger_default_proc()
 title=Restore default method settings
-description = Reset all settings, the gens set and the probabilities table
+description = Reset all settings, the generators set and the probabilities table
 file = trigger.default.proc.js
 auto=0
