still fixing bugs for method plug-in

--- a/plugins/forms/method/method.ini
+++ b/plugins/forms/method/method.ini
@@ -2,4 +2,4 @@
 caption=Method
 subset=forms
 baseid=method
-starting_params= tab:repetends|gens|ifs|fixedpoints
+starting_params=repetends|generators|random|points
