fixed bugs 'probability' terminal cmd

--- a/settings/circles.menu.ini
+++ b/settings/circles.menu.ini
@@ -74,9 +74,9 @@
 2.2.2@%tools%@@2.2.2
 2.3@line@@2.3
 2.4@Terminal@@2.4
-2.4.1@Console@setTimeout( function(){ circles_lib_plugin_load('forms','terminal',YES,0,YES); }, 700 );@2.4.1@@
-2.4.2@Batch Script Compiler@setTimeout( function(){ circles_lib_plugin_load('forms','terminal',YES,1,YES); }, 700 );@2.4.2@@
-2.5@Circles script@setTimeout( function(){ circles_lib_plugin_load('forms','script.editor'); }, 700 );@2.5
+2.4.1@Console@setTimeout( function(){ circles_lib_plugin_load('forms','terminal',YES,0,YES); }, 700 );@2.4.1@@Ctrl+Alt+T
+2.4.2@Batch Script@setTimeout( function(){ circles_lib_plugin_load('forms','terminal',YES,1,YES); }, 700 );@2.4.2@@Ctrl+Alt+B
+2.5@Circles script@setTimeout( function(){ circles_lib_plugin_load('forms','script.editor'); }, 700 );@2.5@@Ctrl+Alt+S
 2.6@line@@2.6
 2.7@Bip box@setTimeout( function(){ circles_lib_plugin_load('forms','bip'); }, 700 );@2.7
 2.8@Storage space@setTimeout( function(){ circles_lib_plugin_load('forms','storage.space'); }, 700 );@2.8
