reworking terminal cmds + demo #15

--- a/settings/circles.menu.ini
+++ b/settings/circles.menu.ini
@@ -86,7 +86,7 @@
 3.1.2@Refresh@circles_lib_canvas_process_ask(NO,YES,Z_PLANE,YES,YES,CHECK);@3.1.2@@
 3.1.3@Set Z-plane as target@_glob_target_plane=Z_PLANE;circles_lib_menu_entries_update();@3.1.3@MENU_ZPLANE_TARGET@
 3.2@Hide Axes@_glob_show_grid_zplane=!_glob_show_grid_zplane;circles_lib_canvas_render_zplane(null,null,null,YES,YES,YES,NO,YES);circles_lib_menu_entries_update();@3.2@MENU_SHOW_HIDE_AXES_ZPLANE
-3.3@Show symbols@circles_lib_symbol_zplane_display(null,null,null,YES,YES,YES);@3.3@MENU_SHOW_HIDE_SYMBOLS_ZPLANE
+3.3@Show symbols@circles_lib_symbol_zplane_display(null,null,null,YES,YES);circles_lib_canvas_render_zplane();@3.3@MENU_SHOW_HIDE_SYMBOLS_ZPLANE
 3.4@Coords & Zoom@@3.4
 3.4.1@Panel@setTimeout( function(){ circles_lib_plugin_load('forms','coordinates',NO,Z_PLANE); }, 700 );@3.4.1
 3.4.2@Default view@circles_lib_coordinates_reset_core(Z_PLANE,YES,NO,YES,OUTPUT_SCREEN);circles_lib_canvas_process_ask(NO,YES,Z_PLANE,YES,YES,CHECK,null,OUTPUT_SCREEN);@3.4.2
