--- a/settings/circles.menu.ini
+++ b/settings/circles.menu.ini
@@ -110,9 +110,9 @@
 3.9.1@Seeds@circles_lib_items_switch_to(ITEMS_SWITCH_SEEDS,NO);circles_lib_menu_entries_update();circles_lib_canvas_render_zplane(null,null,null,YES,YES,YES,NO,YES);@3.9.1@MENU_ITEM_SEEDS
 3.9.2@Gens@circles_lib_items_switch_to(ITEMS_SWITCH_GENS,NO);circles_lib_menu_entries_update();circles_lib_canvas_render_zplane(null,null,null,YES,YES,YES,NO,YES);@3.9.2@MENU_ITEM_GENS
 3.10@line@@3.10
-3.11@Capture & Save pix@@3.11
-3.11.1@PNG@circles_lib_files_pix_save_ask(Z_PLANE,_glob_zplane_rendering_canvas_placeholder,'zplane.png',_glob_zplane_canvas_merge);@3.11.1@@
-3.11.2@SVG@circles_lib_files_pix_save_ask(Z_PLANE,_glob_zplane_rendering_canvas_placeholder,'zplane.svg',_glob_zplane_canvas_merge);@3.11.2
+3.11@Capture rendering layer & Save pix@@3.11
+3.11.1@PNG@circles_lib_files_pix_save_ask(Z_PLANE,_glob_zplane_rendering_layer_pointer,'zplane.png',_glob_zplane_canvas_merge);@3.11.1@@
+3.11.2@SVG@circles_lib_files_pix_save_ask(Z_PLANE,_glob_zplane_rendering_layer_pointer,'zplane.svg',_glob_zplane_canvas_merge);@3.11.2
 3.11.3@PS@circles_lib_canvas_save_to_e_ps('z.plane.ps');@3.11.3
 3.11.4@EPS@circles_lib_canvas_save_to_e_ps('z.plane.eps');@3.11.4
 3.11.5@PDF report@circles_lib_files_pdf_save_ask(circles_lib_files_pdf_save_report,NO,OUTPUT_SCREEN,CALLER_TYPE_NONE,Z_PLANE );@3.11.5@@
@@ -138,8 +138,8 @@
 4.4.3.2@Screen@circles_lib_canvas_coords_toggle_remap(W_PLANE,CANVAS_SCREEN_MAP);@4.4.3.2@MENU_ITEM_WPLANE_SCREEN_MAP
 4.5@line@@4.5
 4.6@Save@@4.6
-4.6.1@PNG@circles_lib_files_pix_save_ask(W_PLANE,_glob_wplane_rendering_canvas_placeholder,'wplane.png',_glob_wplane_canvas_merge);@4.6.1@@
-4.6.2@SVG@circles_lib_files_pix_save_ask(W_PLANE,_glob_wplane_rendering_canvas_placeholder,'wplane.svg',_glob_wplane_canvas_merge);@4.6.2
+4.6.1@PNG@circles_lib_files_pix_save_ask(W_PLANE,_glob_wplane_rendering_canvas_pointer,'wplane.png',_glob_wplane_canvas_merge);@4.6.1@@
+4.6.2@SVG@circles_lib_files_pix_save_ask(W_PLANE,_glob_wplane_rendering_canvas_pointer,'wplane.svg',_glob_wplane_canvas_merge);@4.6.2
 4.6.3@PS@circles_lib_canvas_save_to_e_ps('w.plane.ps');@4.6.3
 4.6.4@EPS@circles_lib_canvas_save_to_e_ps('w.plane.eps');@4.6.4
 4.6.5@LaTeX@circles_lib_canvas_save_to_latex('w.plane.tex');@4.6.5
